# Advance-RAG

./: .gitignore  pyproject.toml  standalone_embed.sh
notebooks/: 01_HyDe.ipynb  02_fusion_retrieval.ipynb  03_reranking.ipynb  04_query_transformations.ipynb  05_adaptive_retrieval.ipynb  06_context_enrichment_window.ipynb  adv_sparse_embeddings.ipynb  bge_m3_multivector.ipynb  crag.ipynb  self_rag.ipynb
volumes/milvus/data/insert_log/463477661535044663/463477661535044664/463477661535244680/0/: 463477661535244681
volumes/milvus/data/insert_log/463477661535044663/463477661535044664/463477661535244680/1/: 463477661535244682
volumes/milvus/data/insert_log/463477661535044663/463477661535044664/463477661535245689/102/: 463477661535355694
volumes/milvus/data/insert_log/463477661535044663/463477661535044664/463477661535245689/103/: 463477661535355695
volumes/milvus/data/insert_log/463477661535044663/463477661535044664/463477661535415955/0/: 463477661535525958
volumes/milvus/data/stats_log/463477661535044663/463477661535044664/463477661535244680/100/: 1
volumes/milvus/data/stats_log/463477661535044663/463477661535044664/463477661535244686/100/: 1  463477661535244691
volumes/milvus/data/stats_log/463477661535044663/463477661535044664/463477661535245689/100/: 463477661535355696
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
